# hokuyo_ws

./: .gitignore  .gitmodules  IEEE_CALIBRATION_ANALYSIS.md  MOTOR_CALIBRATION.md  QUICK_START.md  README.md  RVIZ_SETUP.md  SYSTEM_ANALYSIS.md  SYSTEM_INTEGRATION.md  UNIT_CONVERSION_UPDATE.md
src/gazebo_sim/: CMakeLists.txt  package.xml
src/gazebo_sim/src/: gazebo_c.cpp
src/head_apf_ismail/: CMakeLists.txt  package.xml
src/head_apf_ismail/include/head_apf/: definitions.hpp  head_apf.hpp  utility.hpp
src/head_apf_ismail/launch/: head_apf.launch
src/head_apf_ismail/src/: head_apf.cpp  main.cpp  utility.cpp
src/hokuyo_go/: CMakeLists.txt  MIGRATION_GUIDE.md  POINTCLOUD_MIGRATION_SUMMARY.md  TF_SETUP_GUIDE.md  package.xml  setup.py
src/hokuyo_go/include/hokuyo_go/modular_scanner/: laser_scanner_node.h  parametric_scanner.h  point_cloud_segmenter.h  voxel_grid.h
src/hokuyo_go/launch/: adaptive_voxel_scan.launch  parametric_scan.launch  real_pantilt.launch  segmenter.launch
src/hokuyo_go/rviz/: real_pantilt.rviz
src/hokuyo_go/scripts/: calibrate.py  density_simulation.py  depth_segmentation_node.py  test_fov_fixed.py
src/hokuyo_go/src/: laser_real.cpp  laser_real_position.cpp  laser_real_working.cpp  laser_real_yedek.cpp  laser_sim.cpp  laser_sim_fullscan.cpp  laser_to_pointcloud-beforemert.cpp  laser_to_pointcloud.cpp  laser_to_pointcloud_firstcode.cpp  laser_to_pointcloud_fromscratch.cpp  laser_to_pointcloud_lasttry.cpp  utility.cpp  utility.h  vel_publisher.cpp  vel_publisher_deneme.cpp  vel_publisher_old.cpp  vel_publisher_yedek.cpp
src/hokuyo_go/src/modular_scanner/: README.md  laser_real_position_main.cpp  laser_scanner_node.cpp  parametric_scanner.cpp  point_cloud_segmenter.cpp  point_cloud_segmenter_main.cpp  voxel_grid.cpp
src/hokuyo_go/urdf/: real_pantilt.urdf
src/hokuyo_plus/config/: gazebo_tama_turtle.urdf  ros_vel_controllers.yaml
src/hokuyo_plus/launch/: gazebo_turtle_tama.launch  gazebo_vel_turtle_tama.launch  small_house_turtle.launch
src/hokuyo_plus/rviz/: laser_hokuyo.rviz
src/ptu_calib_cpp/: CMakeLists.txt  package.xml
src/ptu_calib_cpp/include/ptu_calib_cpp/: kinematic_model.h  scan_capture.h
src/ptu_calib_cpp/launch/: acquire.launch  pipeline.launch  sim_acquire.launch  sim_gazebo.launch  sim_readme.md  solve.launch
src/ptu_calib_cpp/results/: calibrated_pantilt.urdf  pan_data_20260325_201650.csv  pan_data_20260325_201717.csv  pan_data_20260325_204554.csv  pan_data_20260325_205128.csv  pan_data_20260325_205753.csv  pan_data_20260325_220451.csv  pan_data_20260325_220931.csv  pan_data_20260325_221449.csv  pan_data_20260325_221529.csv  pan_data_20260325_222037.csv  pan_data_20260325_222510.csv  pan_data_20260325_222702.csv  pan_data_20260325_222801.csv  pan_data_20260326_133123.csv  pan_data_20260326_142306.csv  tilt_data_20260325_201740.csv  tilt_data_20260325_204530.csv  tilt_data_20260325_205032.csv  tilt_data_20260325_205820.csv  tilt_data_20260325_220416.csv  tilt_data_20260325_221012.csv  tilt_data_20260325_221613.csv  tilt_data_20260325_222546.csv  tilt_data_20260325_222854.csv  tilt_data_20260326_133046.csv  tilt_data_20260326_142214.csv
src/ptu_calib_cpp/src/: acquire_node.cpp  pipeline_node.cpp  sim_joint_controller.cpp  solve_node.cpp
src/ptu_calib_cpp/urdf/: nominal_pantilt.urdf  skewed_pantilt.urdf
src/ptu_calib_cpp/worlds/: calib_test.world
src/ptu_lidar_calib/: CMakeLists.txt  package.xml
src/ptu_lidar_calib/launch/: acquire.launch  calibrate.launch  pipeline.launch  ptu_command.launch  run_urdf_tf.launch  ui_stack.launch
src/ptu_lidar_calib/report/: main.aux  main.out  main.tex  main.toc
src/ptu_lidar_calib/results/: calib_data_20260311_204540.npz  calib_data_20260316_133404.npz  calib_data_20260316_134756.npz  delta_20260311_204540.npy  valid_data_20260311_204540.npz
src/ptu_lidar_calib/scripts/: calib_to_urdf.py  calibration_acquisition.py  calibration_pipeline.py  calibration_solver.py  calibration_validation.py  ptu_command_server.py
src/ptu_lidar_calib/src/: ptu_lidar_calibrator.cpp
src/ptu_lidar_calib/srv/: GoTo.srv
src/ptu_lidar_calib/urdf/: real_pantilt.urdf
src/ptu_lidar_calib/urdf/meshes/: URG-04LX.dae
src/ptu_lidar_calib/web/: index.html
src/segmentation/: CMakeLists.txt  package.xml
src/segmentation/include/: colorhelper.h  segmentation.h
src/segmentation/launch/: segmentation.launch
src/segmentation/src/: colorhelper.cpp  main.cpp  segmentation.cpp
src/zed_params/: CMakeLists.txt  package.xml
src/zed_params/include/zed_params/: zed2_parameters.h
