<?xml version="1.0"?>
<package format="2">
  <name>ptu_lidar_calib</name>
  <version>0.1.0</version>
  <description>Full-DOF calibration for pan-tilt + 2D LiDAR using a single plane</description>

  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>rospy</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
